# pugvania

./: .gitignore  CMakeLists.txt  LICENSE  README.md  path_config.ini
cmake_modules/: FindDate.cmake  FindGLFW.cmake
config/: engine_config.ini  logging_config.ini
engine/: CMakeLists.txt  engine.cpp  engine.h  engine_config.h.in  engine_subsystem.h
engine/common/: game_time.cpp  game_time.h
engine/common/datatypes/: color_types.h  shape_types.h
engine/common/patterns/: enum_class_iterator.h  reverse_iterator.h
engine/common/utility/: config_file.cpp  config_file.h  debug_defines.h  float_comparison.h  path.cpp  path.h.in  pi.h  windows_terminal_colors.h
engine/debugging/: log_channel.cpp  log_channel.h  log_output.h  log_output_files.cpp  log_output_files.h  log_output_globalfile.cpp  log_output_globalfile.h  log_output_terminal.cpp  log_output_terminal.h  logging.cpp  logging.h
engine/graphics/: glad.c  graphics.h  graphics_bootstrapper.cpp  graphics_bootstrapper.h  graphics_glfw.cpp  graphics_glfw.h  shader_resources.cpp  shader_resources.h
engine/resources/: resource.h  resource_cache.h  resources.cpp  resources.h
engine/timing/: timing.cpp  timing.h
engine/utility/: config_file.cpp  config_file.h  game_time.h  path.cpp  path.h.in  windows_terminal_colors.h
engine/utility/patterns/: reverse_iterator.h
game/: CMakeLists.txt  game_config.h.in  main.cpp  pugvania_config.h.in
include/glad/: glad.h
shaders/: default.fs  default.vs
